# firewatch

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  NOTICE  PLUGIN_CONTRACT.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  documenter.md  product-strategist.md  security-reviewer.md  ui-dev.md  ui-tester.md
.claude/commands/: firewatch-end.md  firewatch-start.md
.claude/hooks/: lint-changed.sh  worktree-guard.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci-frontend.yml  ci.yml  gitleaks.yml
deploy/: .env.example  Dockerfile  README.md  docker-compose.host-logs.yml  docker-compose.yml
deploy/lean/: Dockerfile.llamacpp
deploy/nginx/: Dockerfile  nginx.conf
design/soc-design-system/: readme.md
docs/: ROADMAP.md  ai-claims-checklist.md  ai-trust-and-auditability.md  air-gapped-mode.md  contract-stress-2026-06.md  escalation-and-triage-model.md  module-author-guide.md  multi-session-coordination.md  owasp-api-baseline.md  owasp-llm-baseline.md
docs/adr/: 0000-template.md  0001-architecture-pattern-pipeline-ports-and-adapters.md  0002-single-language-python.md  0003-ai-approach-sampling-not-per-log.md  0004-local-first-ai-ollama-only.md  0005-suricata-collector-ssh-pull.md  0006-config-priority-env-file-default.md  0007-storage-sqlite-now-postgresql-later-m6.md  0008-frontend-single-file-dashboard-v1-v2.md  0009-frontend-rewrite-framework-migration-planned.md  0010-unified-source-cards.md  0011-faceted-filters-over-category-tabs.md  0012-ids-action-mapping-alert-badge.md  0013-open-core-licensing.md  0014-mitre-att-ck-capec-native-categorization.md  0015-tiered-autonomy-for-active-response.md  0016-multi-source-per-type-architecture.md  0017-desktop-first-ui-mobile-via-bot.md  0018-product-positioning-integrated-open-source-ai-soc-platform.md  0019-frontend-stack-react-rjsf.md  0020-event-schema-lightweight-ocsf-alignment.md  0021-suricata-ingestion-shipper-push-path.md  0022-local-inference-openai-compatible-endpoint.md  0023-collector-supervisor-lifecycle.md  0024-lineage-legacy-as-functional-oracle.md  0025-source-plugin-db-contract.md  0026-api-auth-posture.md  0027-plugincontext-injection-seam.md  0028-frontend-project-layout-and-toolchain.md  0029-read-query-api-contract.md  0030-event-transport-buffer-ack-seam.md  0031-collect-trigger-sync-autosync-instance-registration.md  0032-all-sources-installed-plus-health-overlay.md  0033-ui-action-seam-siem-now-soar-later.md  0034-source-maintenance-actions-seam.md  0035-analytic-provenance-tagging.md  0036-score-confidence-presentation-contract.md  (+37 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: gates-backend.sh  gates-frontend.sh  gitleaks-full.sh  merge-gate.sh  regen_volume_fixtures.py  setup-hooks.sh
tests/: test_deploy_compose_structure.py
(+524 files in other folders)
